--- a/index.html
+++ b/index.html
@@ -9,3 +9,19 @@
   <p>ここは物語の紹介ページです。</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>てるてる屋敷</title>
+</head>
+<body style="text-align:center;">
+  <h1>ようこそ『最後の神器』へ</h1>
+  <p>ここは物語の紹介ページです。</p>
+  <!-- BGM再生 -->
+  <audio controls autoplay loop>
+    <source src="月のエコール.m4a" type="audio/mp4">
+    お使いのブラウザはオーディオ要素に対応していません。
+  </audio>
+</body>
+</html>
