--- a/index.html
+++ b/index.html
@@ -1,26 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>てるてる屋敷</title>
+  <title>光通にあいさつしよう</title>
+  <style>
+    body {
+      font-family: "Hiragino Kaku Gothic ProN", sans-serif;
+      background-color: #f9f8f7;
+      text-align: center;
+      padding: 2em;
+    }
+    img {
+      width: 300px;
+      border-radius: 10px;
+    }
+    .speech-bubble {
+      position: relative;
+      background: #ffffff;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      display: inline-block;
+      padding: 1em;
+      margin-top: 1em;
+      max-width: 300px;
+    }
+    .speech-bubble::after {
+      content: "";
+      position: absolute;
+      bottom: -20px;
+      left: 30px;
+      border-width: 10px 10px 0;
+      border-style: solid;
+      border-color: #ffffff transparent;
+      display: block;
+      width: 0;
+    }
+    button {
+      margin-top: 1em;
+      padding: 0.5em 1em;
+      font-size: 1.1em;
+      background-color: #aee1f9;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #87cefa;
+    }
+  </style>
 </head>
 <body>
- 
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>てるてる屋敷</title>
-</head>
-<body style="text-align:center;">
-  <h1>ようこそ『最後の神器』へ</h1>
-  <p>ここは物語の紹介ページです。</p>
-  <!-- BGM再生 -->
+
+  <h1>光通にあいさつしよう</h1>
+  <img src="koumitsu.png" alt="光通の画像">
+
+  <p>よかったら音楽でも聞いてね</p>
   <audio controls autoplay loop>
-    <source src="月のエコール.m4a" type="audio/mp4">
-    お使いのブラウザはオーディオ要素に対応していません。
+    <source src="quiet-music.mp3" type="audio/mpeg">
+    お使いのブラウザでは音楽が再生できません。
   </audio>
+
+  <div id="bubble" class="speech-bubble" style="display: none;"></div>
+  <button onclick="sayHello()">こんにちは</button>
+
+  <script>
+    function sayHello() {
+      const message = "こんにちは！挨拶してくれてうれしいよ。\n・・・ありがとう。";
+      const bubble = document.getElementById("bubble");
+      bubble.textContent = message;
+      bubble.style.display = "inline-block";
+
+      // 音声読み上げ
+      if ('speechSynthesis' in window) {
+        const utter = new SpeechSynthesisUtterance(message);
+        utter.lang = "ja-JP";
+        window.speechSynthesis.speak(utter);
+      }
+    }
+  </script>
+
 </body>
 </html>
