--- a/index.html
+++ b/index.html
@@ -65,3 +65,8 @@
 
 </body>
 </html>
+<button onclick="document.getElementById('bgm').play()">音楽を流す</button>
+
+<audio id="bgm" loop>
+  <source src="music/bgm.mp3" type="audio/mpeg">
+</audio>
